--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.mycompany.app</groupId>
   <artifactId>my-app</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>2.0-SNAPSHOT</version>
   <name>my-app</name>
   <url>http://maven.apache.org</url>
   <dependencies>
@@ -14,6 +14,11 @@
       <version>4.13.2</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+     <groupId>com.mycompany.app</groupId>
+     <artifactId>my-app</artifactId>
+     <version>1.0</version>
+   </dependency>
   </dependencies>
   <distributionManagement>
     <repository>
@@ -34,6 +39,12 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+  <repositories>
+    <repository>
+      <id>maven-public</id>
+      <url>http://nexusbh.eastus.cloudapp.azure.com:8081/repository/maven-public/</url>
+    </repository>
+  </repositories>
   <build>
     <pluginManagement>
       <plugins>
