--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.mycompany.app</groupId>
   <artifactId>my-app</artifactId>
   <packaging>jar</packaging>
-  <version>2.0-SNAPSHOT</version>
+  <version>3.0-SNAPSHOT</version>
   <name>my-app</name>
   <url>http://maven.apache.org</url>
   <dependencies>
@@ -20,22 +20,29 @@
      <version>1.0</version>
    </dependency>
   </dependencies>
-  <distributionManagement>
-    <repository>
-      <uniqueVersion>false</uniqueVersion>
-      <id>coreapp-releases</id>
-      <name>coreapp-releases</name>
-      <url>http://nexusbh.eastus.cloudapp.azure.com:8081/repository/coreapp-releases/</url>
-      <layout>default</layout>
-    </repository>
-    <snapshotRepository>
-      <uniqueVersion>true</uniqueVersion>
-      <id>coreapp-snapshots</id>
-      <name>coreapp-snapshots</name>
-      <url>http://nexusbh.eastus.cloudapp.azure.com:8081/repository/coreapp-snapshots/</url>
-      <layout>legacy</layout>
-    </snapshotRepository>
-  </distributionManagement>
+  <profiles>
+    <profile>
+      <id>profile-1</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <distributionManagement>
+       <repository>
+        <uniqueVersion>false</uniqueVersion>
+        <id>coreapp-releases</id>
+        <name>coreapp-releases</name>
+        <url>http://nexusbh.eastus.cloudapp.azure.com:8081/repository/coreapp-releases/</url>
+        <layout>default</layout>
+      </repository>
+     <snapshotRepository>
+       <uniqueVersion>true</uniqueVersion>
+       <id>coreapp-snapshots</id>
+       <name>coreapp-snapshots</name>
+       <url>http://nexusbh.eastus.cloudapp.azure.com:8081/repository/coreapp-snapshots/</url>
+       <layout>legacy</layout>
+     </snapshotRepository>
+    </distributionManagement>
+    </profile>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
