--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
      </snapshotRepository>
     </distributionManagement>
     </profile>
+  </profiles>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
