--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,22 @@
      <version>1.0</version>
    </dependency>
   </dependencies>
+  <distributionManagement>
+       <repository>
+        <uniqueVersion>false</uniqueVersion>
+        <id>coreapp-releases</id>
+        <name>coreapp-releases</name>
+        <url>http://nexusbh.eastus.cloudapp.azure.com:8081/repository/coreapp-releases/</url>
+        <layout>default</layout>
+      </repository>
+     <snapshotRepository>
+       <uniqueVersion>true</uniqueVersion>
+       <id>coreapp-snapshots</id>
+       <name>coreapp-snapshots</name>
+       <url>http://nexusbh.eastus.cloudapp.azure.com:8081/repository/coreapp-snapshots/</url>
+       <layout>legacy</layout>
+     </snapshotRepository>
+    </distributionManagement>
   <profiles>
     <profile>
       <id>profile-1</id>
