--- a/pom.xml
+++ b/pom.xml
@@ -14,11 +14,11 @@
       <version>4.13.2</version>
       <scope>test</scope>
     </dependency>
-    <dependency>
+    <!--<dependency>
      <groupId>com.mycompany.app</groupId>
      <artifactId>my-app</artifactId>
      <version>1.0</version>
-   </dependency>
+    </dependency>-->
   </dependencies>
   <distributionManagement>
        <repository>
